# page-replace

./: .gitignore  Block.cpp  Block.h  Blocks.cpp  Blocks.h  CMakeLists.txt  Doxyfile  FIFO.cpp  FIFO.h  LRU.cpp  LRU.h  Main.cpp  Main.h  Memory.cpp  Memory.h  Optimal.cpp  Optimal.h  PageReplacementAlgorithm.cpp  PageReplacementAlgorithm.h  PageReplacementAlgorithmTester.cpp  PageReplacementAlgorithmTester.h  PageRequest.cpp  PageRequest.h  Readme.md  Request.cpp  Request.h  RequestSequence.cpp  RequestSequence.h  Tools.cpp  Tools.h  requierments.md
doc/: BasicFlow.puml  Doxyfile  FIFOFlow.puml  LRUFlow.puml  OptimalFlow.puml  Readme.md  Report.md  Requierments.md  Requirements.md  basicFlow.puml  bdoc  build  optimalFlow.puml  requierments.md
